--- a/core/src/main/resources/com/github/api/v2/services/constant/GitHubApiUrls.properties
+++ b/core/src/main/resources/com/github/api/v2/services/constant/GitHubApiUrls.properties
@@ -81,7 +81,7 @@ com.github.api.v2.services.commitService.getCommitsFile=http://github.com/api/{v
 com.github.api.v2.services.commitService.getCommit=http://github.com/api/{version}/{format}/commits/show/{userName}/{repositoryName}/{sha}
 
 # Object API
-com.github.api.v2.services.objectService.getTree=http://github.com/api/{version}/{format}/tree/full/{userName}/{repositoryName}/{sha}
+com.github.api.v2.services.objectService.getTree=http://github.com/api/{version}/{format}/tree/show/{userName}/{repositoryName}/{sha}
 com.github.api.v2.services.objectService.getBlob=http://github.com/api/{version}/{format}/blob/show/{userName}/{repositoryName}/{sha}/{filePath}
 com.github.api.v2.services.objectService.getBlobs=http://github.com/api/{version}/{format}/blob/full/{userName}/{repositoryName}/{sha}
 com.github.api.v2.services.objectService.getObjectContent=http://github.com/api/{version}/{format}/blob/show/{userName}/{repositoryName}/{sha}
