--- a/core/src/main/resources/com/github/api/v2/services/constant/GitHubApiUrls.properties
+++ b/core/src/main/resources/com/github/api/v2/services/constant/GitHubApiUrls.properties
@@ -36,7 +36,9 @@ com.github.api.v2.services.issueService.reopenIssue=http://github.com/api/{versi
 com.github.api.v2.services.issueService.updateIssue=http://github.com/api/{version}/{format}/issues/edit/{userName}/{repositoryName}/{issueNumber}
 com.github.api.v2.services.issueService.getIssueLabels=http://github.com/api/{version}/{format}/issues/labels/{userName}/{repositoryName}
 com.github.api.v2.services.issueService.addLabel=http://github.com/api/{version}/{format}/issues/label/add/{userName}/{repositoryName}/{label}/{issueNumber}
+com.github.api.v2.services.issueService.addLabelWithoutIssue=http://github.com/api/{version}/{format}/issues/label/add/{userName}/{repositoryName}/{label}
 com.github.api.v2.services.issueService.removeLabel=http://github.com/api/{version}/{format}/issues/label/remove/{userName}/{repositoryName}/{label}/{issueNumber}
+com.github.api.v2.services.issueService.removeLabelWithoutIssue=http://github.com/api/{version}/{format}/issues/label/remove/{userName}/{repositoryName}/{label}
 com.github.api.v2.services.issueService.addComment=http://github.com/api/{version}/{format}/issues/comment/{userName}/{repositoryName}/{issueNumber}
 com.github.api.v2.services.issueService.getIssuesByLabel=http://github.com/api/{version}/{format}/issues/list/{userName}/{repositoryName}/label/{label}
 
