Get followers/following as full

--- a/core/src/main/resources/com/github/api/v2/services/constant/GitHubApiUrls.properties
+++ b/core/src/main/resources/com/github/api/v2/services/constant/GitHubApiUrls.properties
@@ -12,8 +12,8 @@ com.github.api.v2.services.userService.searchUsersByEmail=http://github.com/api/
 com.github.api.v2.services.userService.getUser=http://github.com/api/{version}/{format}/user/show/{userName}
 com.github.api.v2.services.userService.getCurrentUser=http://github.com/api/{version}/{format}/user/show
 com.github.api.v2.services.userService.updateUser=http://github.com/api/{version}/{format}/user/show/{userName}
-com.github.api.v2.services.userService.getUserFollowers=http://github.com/api/{version}/{format}/user/show/{userName}/followers
-com.github.api.v2.services.userService.getUserFollowing=http://github.com/api/{version}/{format}/user/show/{userName}/following
+com.github.api.v2.services.userService.getUserFollowers=http://github.com/api/{version}/{format}/user/show/{userName}/followers?full=1
+com.github.api.v2.services.userService.getUserFollowing=http://github.com/api/{version}/{format}/user/show/{userName}/following?full=1
 com.github.api.v2.services.userService.followUser=http://github.com/api/{version}/{format}/user/follow/{userName}
 com.github.api.v2.services.userService.unfollowUser=http://github.com/api/{version}/{format}/user/unfollow/{userName}
 com.github.api.v2.services.userService.getWatchedRepositories=http://github.com/api/{version}/{format}/repos/watched/{userName}
