--- a/schema/pom.xml
+++ b/schema/pom.xml
@@ -7,4 +7,12 @@
   </parent>
   <artifactId>github-java-schema</artifactId>
   <packaging>jar</packaging>
+  <dependencies>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>1.4</version>
+      <scope>compile</scope>
+    </dependency>
+  </dependencies>
 </project>
