--- a/core/pom.xml
+++ b/core/pom.xml
@@ -24,7 +24,7 @@
   <dependencies>
     <dependency>
       <groupId>com.google.code.gson</groupId>
-      <artifactId>gson</artifactId>
+      <artifactId>mygson</artifactId>
       <version>1.4</version>
       <scope>compile</scope>
     </dependency>
